auto_branch_pushes/kkimdev-deploy-fix/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller

---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: ppluto-main-gateway
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    # TODO: Use let's encrypt once it works with self signing.
    # cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: eg
  listeners:
    - name: http-web
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All

    # TODO: This doesn't work and don't know why :/.
    - name: https-web
      port: 443
      protocol: HTTPS
      hostname: app-test.ppluto.dev
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: app-test-ppluto-dev-cert
            group: core
      allowedRoutes:
        namespaces:
          from: All

    # TODO: HTTPS support.
    - name: grpc-web
      port: 5082
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All

---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: http-web-route
spec:
  parentRefs:
    - name: ppluto-main-gateway
      sectionName: http-web
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ppluto-main-service
          port: 80

---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: https-web-route
spec:
  parentRefs:
    - name: ppluto-main-gateway
      sectionName: https-web
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ppluto-main-service
          port: 80

---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: grpc-web-route
spec:
  parentRefs:
    - name: ppluto-main-gateway
      sectionName: grpc-web
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ppluto-main-service
          port: 82
